2009-05-04  Stefan Jahn  <stefan@lkcc.org>

	* library/Ideal.lib: Fixed symbols of LP1 and VSum.

2009-03-25  Stefan Jahn  <stefan@lkcc.org>

	* library/Transistors.lib: Added yet another transistor provided
	by Frans Schreuder. Thanks!

	* library/OpAmps.lib: Reworked symbols of Mike Brinson's
	operational amplifiers.  Unified layout and put them onto grid.

2009-02-01  Stefan Jahn  <stefan@lkcc.org>

	* library/Transistors.lib: Added 6 new transistors provided by
	Peter Lemmens.  Thanks a lot.

2008-10-27  Stefan Jahn  <stefan@lkcc.org>

	* library/Transistors.lib: Added 4 new transistors provided by
	Frans Schreuder.  Thanks!

2008-09-20  Stefan Jahn  <stefan@lkcc.org>

	* symbolwidget.cpp (createSymbol): Added symbol code for new
	HICUM/L0 v1.2 model.

2008-07-11  Stefan Jahn  <stefan@lkcc.org>

	* symbolwidget.cpp (createSymbol): Added symbol code for HICUM
	transistor models.

2008-06-07  Stefan Jahn  <stefan@lkcc.org>

	* library/Varistors.lib: Added new varistor library.  Thanks a lot
	to Gunther Kraut!

2008-05-29  Stefan Jahn  <stefan@lkcc.org>

	* library/Regulators.lib: Added new library containing some
	voltage regulators based on SPICE models.

2008-05-28  Stefan Jahn  <stefan@lkcc.org>

	* library/Transistors.lib: Added few more BJT transistors from
	Zetex (FZT's in SOT223 packages).

2008-05-05  Stefan Jahn  <stefan@lkcc.org>

	* library/Makefile.am (COMPLIBS): Added three more libraries
	(Ideal, PMOSFETs and NMOSFETs) provided by Gunther.  Thanks a lot!

2008-01-07  Stefan Jahn  <stefan@lkcc.org>

	* searchdialog.cpp (slotSearch): Fixed bug avoiding displaying
	wrong symbol within search results.  Thanks to Michael!

2007-12-28  Stefan Jahn  <stefan@lkcc.org>

	* library/JFETs.lib: Added loads of new jfet models.

2007-12-26  Stefan Jahn  <stefan@lkcc.org>

	* library/Transistors.lib: Added some more transistor models.

2007-11-22  Stefan Jahn  <stefan@lkcc.org>

	* displaydialog.cpp (DisplayDialog): Fixed bug in help display