@@ -25,7 +25,7 @@ Node::Node(int _x, int _y)
   Label = 0;
   Type  = isNode;
   State = 0;
-  Type = "";
+  DType = "";
 
   cx = _x;
   cy = _y;
