@@ -37,9 +37,9 @@ public:
   void  setName(const QString&, const QString&, int x_=0, int y_=0);
 
   QPtrList<Element> Connections;
-  QString Name; // node name used by creation of netlist
-  QString Type; // type of node (used by digital files)
-  int State;	// remember some things during some operations
+  QString Name;  // node name used by creation of netlist
+  QString DType; // type of node (used by digital files)
+  int State;	 // remember some things during some operations
 };
 
 #endif
